[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
either = "1.6.1"
wasm-bindgen = "0.2.88"

[profile.release]
debug = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
